Changed my prefered way to format AGAIN

--- a/SimTECH/SimTECH/Pages/Climates/Dialogs/ClimateEditor.razor
+++ b/SimTECH/SimTECH/Pages/Climates/Dialogs/ClimateEditor.razor
@@ -49,14 +49,12 @@
 </MudDialog>
 
 @code {
-    [CascadingParameter]
-    protected MudDialogInstance? EditDialog { get; set; }
+    [CascadingParameter] protected MudDialogInstance? EditDialog { get; set; }
 
-    [Parameter]
-    public Climate? Climate { get; set; }
+    [Parameter] public Climate? Climate { get; set; }
 
-    EditClimate model;
-    string[] weatherIcons = Globals.AllWeatherIcons;
+    private EditClimate model { get; set; }
+    private string[] weatherIcons = Globals.AllWeatherIcons;
 
     protected override void OnInitialized()
     {
