--- a/SimTECH/SimTECH/Pages/Drivers/Dialogs/DriverEditor.razor
+++ b/SimTECH/SimTECH/Pages/Drivers/Dialogs/DriverEditor.razor
@@ -105,14 +105,10 @@
 </MudDialog>
 
 @code {
-    [CascadingParameter]
-    protected MudDialogInstance? DriverDialog { get; set; }
+    [CascadingParameter] protected MudDialogInstance? DriverDialog { get; set; }
 
-    [Parameter]
-    public Driver? Driver { get; set; }
-
-    [Parameter]
-    public List<Trait> Traits { get; set; } = new();
+    [Parameter] public Driver? Driver { get; set; }
+    [Parameter] public List<Trait> Traits { get; set; } = new();
 
     private EditDriverModel Model { get; set; }
     private List<Trait> AvailableTraits { get; set; }
