--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Practice.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Practice.razor
@@ -1,7 +1,4 @@
-﻿@using MudExtensions
-@using SimTECH.Pages.RaceWeek.Components
-
-@inject IRaceWeekService _raceWeekService
+﻿@using SimTECH.Pages.RaceWeek.Components
 
 <MudLoading Loading="@Loading"
             LoaderType="LoaderType.Circular"
