--- a/SimTECH/SimTECH/Pages/Seasons/Overview/EntrantWizard/Steps/AssignTeamEngines.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/EntrantWizard/Steps/AssignTeamEngines.razor
@@ -43,8 +43,7 @@
 </MudContainer>
 
 @code {
-    [CascadingParameter]
-    public AddEntrantsModel Model { get; set; }
+    [CascadingParameter] public AddEntrantsModel Model { get; set; }
 
     protected override void OnInitialized()
     {
