--- a/SimTECH/SimTECH/Pages/Teams/Dialogs/TeamEditor.razor
+++ b/SimTECH/SimTECH/Pages/Teams/Dialogs/TeamEditor.razor
@@ -43,14 +43,10 @@
 </MudDialog>
 
 @code {
-    [CascadingParameter]
-    protected MudDialogInstance? TeamDialog { get; set; }
+    [CascadingParameter] protected MudDialogInstance? TeamDialog { get; set; }
 
-    [Parameter]
-    public Team? Team { get; set; }
-
-    [Parameter]
-    public List<Trait> Traits { get; set; } = new();
+    [Parameter] public Team? Team { get; set; }
+    [Parameter] public List<Trait> Traits { get; set; } = new();
 
     private EditTeamModel Model { get; set; }
 
