--- a/SimTECH/SimTECH/Pages/Tracks/Dialogs/TrackEditor.razor
+++ b/SimTECH/SimTECH/Pages/Tracks/Dialogs/TrackEditor.razor
@@ -64,14 +64,10 @@
 </MudDialog>
 
 @code {
-    [CascadingParameter]
-    protected MudDialogInstance? TrackDialog { get; set; }
+    [CascadingParameter] protected MudDialogInstance? TrackDialog { get; set; }
 
-    [Parameter]
-    public Track? Track { get; set; }
-
-    [Parameter]
-    public List<Trait> Traits { get; set; } = new();
+    [Parameter] public Track? Track { get; set; }
+    [Parameter] public List<Trait> Traits { get; set; } = new();
 
     private EditTrackModel Model;
     private List<Trait> selectableTraits;
