--- a/SimTECH/SimTECH/Pages/Seasons/Overview/EntrantWizard/Steps/AssignRaceClasses.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/EntrantWizard/Steps/AssignRaceClasses.razor
@@ -51,8 +51,7 @@
 </MudContainer>
 
 @code {
-    [CascadingParameter]
-    public AddEntrantsModel Model { get; set; }
+    [CascadingParameter] public AddEntrantsModel Model { get; set; }
 
     MudDropContainer<EditSeasonTeamModel> dropperClasses;
 
