--- a/SimTECH/SimTECH/Pages/Seasons/Overview/EntrantWizard/Steps/EditEngines.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/EntrantWizard/Steps/EditEngines.razor
@@ -17,6 +17,5 @@
 </MudContainer>
 
 @code {
-    [CascadingParameter]
-    public AddEntrantsModel Model { get; set; }
+    [CascadingParameter] public AddEntrantsModel Model { get; set; }
 }
