--- a/SimTECH/SimTECH/Shared/Components/CountryFlag.razor
+++ b/SimTECH/SimTECH/Shared/Components/CountryFlag.razor
@@ -4,8 +4,7 @@
 
 @code {
     [Parameter] public Country? Code { get; set; } = Globals.DefaultCountry;
-    [Parameter] public ElementSize? Size { get; set; } = ElementSize.Normal;
-    [Parameter] public string? Class { get; set; } = string.Empty;
+    [Parameter] public ElementSize Size { get; set; } = ElementSize.Normal;
 
     private string flagSize
     {
