--- a/SimTECH/SimTECH/Shared/Components/CountryNamedFlag.razor
+++ b/SimTECH/SimTECH/Shared/Components/CountryNamedFlag.razor
@@ -9,8 +9,8 @@
     [Parameter] public ElementSize Size { get; set; } = ElementSize.Normal;
     [Parameter] public Justify Justify { get; set; } = Justify.SpaceBetween;
     [Parameter] public Typo Typo { get; set; } = Typo.body1;
+    [Parameter] public bool Reverse { get; set; }
     [Parameter] public string Class { get; set; } = string.Empty;
-    [Parameter] public bool Reverse { get; set; } = false;
 
     private string flagNationName
     {
