--- a/SimTECH/SimTECH/Shared/MainLayout.razor
+++ b/SimTECH/SimTECH/Shared/MainLayout.razor
@@ -93,7 +93,7 @@
     {
         if (PageType != HelpContent)
         {
-            // Alternatively this could also be implemented by checking for the content on click
+            // NOTE: Alternatively this could also be implemented by checking for the content on click
             IsHelpOpen = false;
             HelpContent = HelpBlockProvider.GetHelpContentForPage(PageType);
         }
